@@ -6,6 +6,8 @@ Changes from v2.4.5 to v2.4.6
   artifacts on small numbers and fonts in high resolution modes.
 - Mac OS X: Add resolution and video mode (OpenGL vs software) selection to
   launcher
+- Added rendering filters for software mode, they are configurable in a new
+  page in general settings
 
 Changes from v2.4.4 to v2.4.5
 - fix crash when saving the game in levels with lots of monsters
